# kj-rs

./: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  build.rs  justfile
.github/workflows/: examples.yaml  test.yaml
examples/bazel/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
examples/bazel/crates_vendor/: BUILD.kj-rs-0.1.0.bazel  defs.bzl
examples/kj-rs-demo/: .gitignore  BUILD.bazel  MODULE.bazel  README.md
examples/kj-rs-demo/crates_vendor/: BUILD.bazel  BUILD.kj-rs-0.1.0.bazel  defs.bzl
examples/kj-rs-demo/src/: awaitables-cc-test.c++  future-boilerplate.c++  future-boilerplate.h  future_boilerplate.rs  lib.rs  promise-boilerplate.c++  promise-boilerplate.h  promise.rs  promise_boilerplate.rs  test-promises.c++  test-promises.h  test_futures.rs
include/: awaiter.h  future.h  promise.h
macro/: Cargo.toml
macro/src/: lib.rs
src/: BUILD.bazel  awaiter.c++  awaiter.h  awaiter.rs  exception.rs  future.h  future.rs  lib.rs  promise.c++  promise.h  promise.rs  result.rs  waker.c++  waker.h
