module(
    name = "kj-rs",
    repo_name = "kj-rs",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_rust", version = "0.58.0")

# LLVM

bazel_dep(name = "toolchains_llvm", version = "1.3.0")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(llvm_version = "19.1.3")
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

# Required by `--extra_toolchains=@local_config_cc//:cc-toolchain-x64_windows-clang-cl` in .bazelrc.
cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc")

# Cap'n Proto

# capnp-cpp deps
bazel_dep(name = "boringssl", version = "0.20250212.0", repo_name = "ssl")
bazel_dep(name = "brotli", version = "1.1.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "zlib", version = "1.3.1.bcr.5")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "capnp-cpp",
    sha256 = "96cfddf676babe345bf321ccfaabb855dfe7dc127e69c4fdd959abd52de47721",
    strip_prefix = "capnproto-capnproto-20af9fe/c++",
    type = "tgz",
    url = "https://github.com/capnproto/capnproto/tarball/20af9fe2de10a2e7f621a212351d20860cc32a0d",
)

# Vendored crates

vendored = use_extension("//:build/vendor_extensions.bzl", "vendored")

# The list of used repos here is kept up to date by `bazel run //deps/rust:crates_vendor -- --repin`.
use_repo(
    vendored,
    "crates_vendor",
    "crates_vendor__cxx-1.0.151",
    "crates_vendor__cxxbridge-cmd-1.0.151",
)
