load("//:build/rust_cxx_bridge.bzl", "rust_cxx_bridge")
load("@rules_rust//rust:defs.bzl", "rust_library")

cc_library(
    name = "kj-rs-lib",
    srcs = glob(["*.c++"]),
    hdrs = glob(["*.h"]),
    include_prefix = "kj-rs",
    deps = [
        ":bridge",
    ],
)

rust_library(
    name = "kj-rs",
    srcs = glob(["*.rs"]),
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "@workerd-cxx//:cxx",
        ":kj-rs-lib",
        ":bridge"
    ],
    compile_data = glob(["*.h"]),
)

rust_cxx_bridge(
    name = "bridge",
    src = "lib.rs",
    hdrs = glob(["*.h"]),
    deps = [
        "@workerd-cxx//:cxx",
        ":cxx",
        "@capnp-cpp//src/kj:kj",
        "@capnp-cpp//src/kj:kj-async",
    ],
    include_prefix = "kj-rs",
)

genrule(
    name = "cxx/generated",
    outs = ["cxx.h"],
    cmd = "$(location @workerd-cxx//:codegen) --header > \"$@\"",
    tools = ["@workerd-cxx//:codegen"],
)

cc_library(
    name = "cxx",
    hdrs = ["cxx.h"],
    include_prefix = "rust",
)
