load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_library")
load("//:build/rust_cxx_bridge.bzl", "rust_cxx_bridge")

# https://bazel.build/configure/windows#clang
platform(
    name = "x64_windows-clang-cl",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        "@bazel_tools//tools/cpp:clang-cl",
    ],
)

rust_library(
    name = "awaitables-rust",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    deps = [
        ":bridge",
        # TODO(now): Why isn't :cxx transitive?
        "@workerd-cxx//:cxx",
        "//:kj-rs",
    ],
)

rust_cxx_bridge(
    name = "bridge",
    src = "src/lib.rs",
    hdrs = [
        "src/test-promises.h",
        "src/future-boilerplate.h",
    ],
    include_prefix = "kj-rs-demo",
    strip_include_prefix = "src",
    deps = [
        "//:kj-rs",
    ],
)

cc_library(
    name = "test-promises",
    srcs = [
        "src/test-promises.c++",
    ],
    linkstatic = select({
        "@platforms//os:windows": True,
        "//conditions:default": False,
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":bridge",
        "//:kj-rs",
    ],
)

cc_test(
    name = "awaitables-cc-test",
    size = "medium",
    srcs = [
        "src/awaitables-cc-test.c++",
    ],
    deps = [
        ":test-promises",
        ":awaitables-rust",
        ":bridge",
        "@capnp-cpp//src/kj:kj-test",
    ],
)
